; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/extr_adc.c_ADC0_clock_init.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/extr_adc.c_ADC0_clock_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_12__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32, i32 }

@DC_ADC0_CLOCK_INIT_BEGIN = common dso_local global i32 0, align 4
@MCLK = common dso_local global %struct.TYPE_11__* null, align 8
@GEN_OSC0 = common dso_local global i32 0, align 4
@GCLK = common dso_local global %struct.TYPE_12__* null, align 8
@ADC0_GCLK_ID = common dso_local global i64 0, align 8
@DC_ADC0_CLOCK_INIT_COMPLETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ADC0_clock_init() #0 {
  %1 = load i32, i32* @DC_ADC0_CLOCK_INIT_BEGIN, align 4
  %2 = call i32 @DBGC(i32 %1)
  %3 = load %struct.TYPE_11__*, %struct.TYPE_11__** @MCLK, align 8
  %4 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  store i32 1, i32* %6, align 4
  %7 = load i32, i32* @GEN_OSC0, align 4
  %8 = load %struct.TYPE_12__*, %struct.TYPE_12__** @GCLK, align 8
  %9 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %11 = load i64, i64* @ADC0_GCLK_ID, align 8
  %12 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 1
  store i32 %7, i32* %14, align 4
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** @GCLK, align 8
  %16 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %16, align 8
  %18 = load i64, i64* @ADC0_GCLK_ID, align 8
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %20, i32 0, i32 0
  store i32 1, i32* %21, align 4
  %22 = load i32, i32* @DC_ADC0_CLOCK_INIT_COMPLETE, align 4
  %23 = call i32 @DBGC(i32 %22)
  ret void
}

declare dso_local i32 @DBGC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
